--- a/InCallUI/res/values-fi/strings.xml
+++ b/InCallUI/res/values-fi/strings.xml
@@ -21,10 +21,11 @@
     <string name="onHold" msgid="9035493194749959955">"Pidossa"</string>
     <string name="unknown" msgid="6878797917991465859">"Tuntematon"</string>
     <string name="private_num" msgid="6713286113000232309">"Salainen numero"</string>
-    <string name="payphone" msgid="1931775086311769314">"Puhelinautomaatti"</string>
+    <!-- no translation found for payphone (4793877574636445118) -->
+    <skip />
     <string name="confCall" msgid="1904840547188336828">"Puhelinneuvottelu"</string>
-    <string name="call_lost" msgid="317670617901479594">"Puhelu katkesi."</string>
-    <string name="ok" msgid="3811371167865772377">"OK"</string>
+    <!-- no translation found for call_lost (6183862117003999578) -->
+    <skip />
     <string name="audio_mode_speaker" msgid="27649582100085266">"Kaiutin"</string>
     <string name="audio_mode_earpiece" msgid="4156527186373869107">"Puhelimen kuuloke"</string>
     <string name="audio_mode_wired_headset" msgid="1465350758489175975">"Langalliset kuulokkeet"</string>
@@ -38,7 +39,8 @@
     <string name="caller_manage_header" msgid="3231519674734638786">"Puhelinneuvottelu <xliff:g id="CONF_CALL_TIME">%s</xliff:g>"</string>
     <string name="voicemail_settings_number_label" msgid="8524164258691887790">"Puhelinvastaajan numero"</string>
     <string name="card_title_dialing" msgid="5769417478498348054">"Soitetaan"</string>
-    <string name="card_title_redialing" msgid="4831412164303596395">"Yritetään uudelleen"</string>
+    <!-- no translation found for card_title_redialing (8253487008234167266) -->
+    <skip />
     <string name="card_title_conf_call" msgid="1162980346189744501">"Puhelinneuvottelu"</string>
     <string name="card_title_incoming_call" msgid="7364539451234646909">"Uusi puhelu"</string>
     <string name="card_title_call_ended" msgid="5544730338889702298">"Puhelu loppui"</string>
@@ -49,9 +51,12 @@
     <string name="card_title_video_call_connecting" msgid="297586766381973954">"Avataan videoyhteys"</string>
     <string name="card_title_video_call" msgid="5898636679563320218">"Videopuhelu"</string>
     <string name="card_title_video_call_requesting" msgid="4587504939739340937">"Videota pyydetään"</string>
-    <string name="card_title_video_call_error" msgid="5520555528871673801">"Videopuheluun liittyminen ei onnistu"</string>
-    <string name="card_title_callback_number" msgid="4604563437776874016">"Takaisinsoittonumero\n <xliff:g id="DARK_NUMBER">%1$s</xliff:g>"</string>
-    <string name="card_title_callback_number_emergency" msgid="85588345502265075">"Hätätilanteiden takaisinsoittonumero\n <xliff:g id="DARK_NUMBER">%1$s</xliff:g>"</string>
+    <!-- no translation found for card_title_video_call_error (9000555878389539225) -->
+    <skip />
+    <!-- no translation found for card_title_callback_number (7307938207564217293) -->
+    <skip />
+    <!-- no translation found for card_title_callback_number_emergency (8634765419223426754) -->
+    <skip />
     <string name="notification_dialing" msgid="2107666444937350731">"Soitetaan"</string>
     <string name="notification_missedCallTitle" msgid="7554385905572364535">"Vastaamatta jäänyt puhelu"</string>
     <string name="notification_missedCallsTitle" msgid="1361677948941502522">"Vastaamattomat puhelut"</string>
@@ -78,23 +83,35 @@
     <string name="notification_missedCall_message" msgid="3049928912736917988">"Viesti"</string>
     <string name="incall_error_power_off" msgid="6550191216405193368">"Poista lentokonetila käytöstä ennen puhelun soittamista."</string>
     <string name="incall_error_emergency_only" msgid="4678640422710818317">"Ei rekisteröity verkkoon."</string>
-    <string name="incall_error_out_of_service" msgid="8587993036435080418">"Mobiiliverkko ei käytettävissä."</string>
-    <string name="incall_error_no_phone_number_supplied" msgid="4197432103471807739">"Puhelua ei soitettu, et antanut kelvollista numeroa."</string>
-    <string name="incall_error_call_failed" msgid="4313552620858880999">"Puhelua ei soitettu."</string>
+    <string name="incall_error_out_of_service" msgid="4100065333878929223">"Matkapuhelinverkko ei ole käytettävissä."</string>
+    <!-- no translation found for incall_error_no_phone_number_supplied (1150414018684246528) -->
+    <skip />
+    <!-- no translation found for incall_error_call_failed (6302746943230078197) -->
+    <skip />
     <string name="incall_status_dialed_mmi" msgid="3672498861336189563">"Aloitetaan MMI-koodisekvenssiä..."</string>
-    <string name="incall_error_supp_service_unknown" msgid="2991054870745666038">"Palvelua ei tueta."</string>
-    <string name="incall_error_supp_service_switch" msgid="3503552565745872241">"Puhelujen vaihto epäonnistui."</string>
-    <string name="incall_error_supp_service_separate" msgid="914362338192301746">"Puhelun erottaminen epäonnistui."</string>
-    <string name="incall_error_supp_service_transfer" msgid="2509871374644921632">"Puhelun siirtäminen epäonnistui."</string>
-    <string name="incall_error_supp_service_conference" msgid="2505727299596357312">"Puhelujen yhdistäminen epäonnistui."</string>
-    <string name="incall_error_supp_service_reject" msgid="7055164130563826216">"Puhelun hylkääminen epäonnistui."</string>
-    <string name="incall_error_supp_service_hangup" msgid="7417583238334762737">"Puhelujen suorittaminen epäonnistui."</string>
+    <!-- no translation found for incall_error_supp_service_unknown (323435289607131929) -->
+    <skip />
+    <!-- no translation found for incall_error_supp_service_switch (5237002176899962862) -->
+    <skip />
+    <!-- no translation found for incall_error_supp_service_separate (7224393405134545246) -->
+    <skip />
+    <!-- no translation found for incall_error_supp_service_transfer (7235952238189391438) -->
+    <skip />
+    <!-- no translation found for incall_error_supp_service_conference (7010354362202271726) -->
+    <skip />
+    <!-- no translation found for incall_error_supp_service_reject (8998568661508655638) -->
+    <skip />
+    <!-- no translation found for incall_error_supp_service_hangup (7434513517153834426) -->
+    <skip />
     <string name="incall_call_type_label_sip" msgid="4931428719494190371">"SIP-puhelu"</string>
     <string name="emergency_enable_radio_dialog_title" msgid="4627849966634578257">"Hätäpuhelu"</string>
     <string name="emergency_enable_radio_dialog_message" msgid="207613549344420291">"Käynnistetään radiota…"</string>
-    <string name="emergency_enable_radio_dialog_retry" msgid="3724423402363063736">"Katvealueella, yritetään uudelleen..."</string>
-    <string name="dial_emergency_error" msgid="7969515493359619960">"Puhelua ei soitettu. <xliff:g id="NON_EMERGENCY_NUMBER">%s</xliff:g> ei ole hätänumero!"</string>
-    <string name="dial_emergency_empty_error" msgid="5556166819619323893">"Puhelua ei soitettu. Valitse hätänumero!"</string>
+    <!-- no translation found for emergency_enable_radio_dialog_retry (5960061579996526883) -->
+    <skip />
+    <!-- no translation found for dial_emergency_error (1509085166367420355) -->
+    <skip />
+    <!-- no translation found for dial_emergency_empty_error (9130194953830414638) -->
+    <skip />
     <string name="dialerKeyboardHintText" msgid="9192914825413747792">"Valitse numero näppäimistöstä"</string>
     <string name="overflowHoldMenuItemText" msgid="7382457697092158039">"Aseta puhelu pitoon"</string>
     <string name="overflowResumeMenuItemText" msgid="8826360006222366843">"Jatka puhelua"</string>
@@ -135,7 +152,8 @@
     <string name="accessibility_call_muted" msgid="2776111226185342220">"Puhelu mykistetty."</string>
     <string name="accessibility_call_unmuted" msgid="7496527089753980871">"Puhelun mykistys poistettiin."</string>
     <string name="accessibility_call_put_on_hold" msgid="4226100429657528833">"Puhelu asetettiin pitoon."</string>
-    <string name="accessibility_call_removed_from_hold" msgid="2269352120695851563">"Puhelu poistettiin pidosta."</string>
+    <!-- no translation found for accessibility_call_removed_from_hold (5107480079544990575) -->
+    <skip />
     <string name="description_target_answer" msgid="7205604197797472471">"Vastaa"</string>
     <string name="description_target_send_sms" msgid="2098326025587950144">"Lähetä tekstiviesti"</string>
     <string name="description_target_decline" msgid="4789834364389731957">"Hylkää"</string>
@@ -153,7 +171,8 @@
     <string name="default_notification_description" msgid="78174796906240970">"Oletusääni (<xliff:g id="DEFAULT_SOUND_TITLE">%1$s</xliff:g>)"</string>
     <string name="ringtone_title" msgid="6374978286202084684">"Puhelimen soittoääni"</string>
     <string name="vibrate_on_ring_title" msgid="9197564612065258960">"Käytä värinää"</string>
-    <string name="dial_pad_autocomplete" msgid="494525952035761075">"Näppäimistön automaattinen täydennys"</string>
+    <!-- no translation found for dial_pad_autocomplete (7683489952557536398) -->
+    <skip />
     <string name="preference_category_ringtone" msgid="5197960752529332721">"Soittoääni ja värinä"</string>
     <string name="manageConferenceLabel" msgid="4691922394301969053">"Hallinnoi puhelinneuvottelua"</string>
     <string name="emergency_call_dialog_number_for_display" msgid="8373041754188879871">"Hätänumero"</string>
