--- a/InCallUI/res/values-lo-rLA/strings.xml
+++ b/InCallUI/res/values-lo-rLA/strings.xml
@@ -21,10 +21,11 @@
     <string name="onHold" msgid="9035493194749959955">"ພັກສາຍຊົ່ວຄາວ"</string>
     <string name="unknown" msgid="6878797917991465859">"ບໍ່ຮູ້ຈັກ"</string>
     <string name="private_num" msgid="6713286113000232309">"ເບີສ່ວນໂຕ"</string>
-    <string name="payphone" msgid="1931775086311769314">"ໂທລະສັບສາທາລະນະ"</string>
+    <!-- no translation found for payphone (4793877574636445118) -->
+    <skip />
     <string name="confCall" msgid="1904840547188336828">"ປະຊຸມສາຍ"</string>
-    <string name="call_lost" msgid="317670617901479594">"ສາຍຫຼຸດ."</string>
-    <string name="ok" msgid="3811371167865772377">"ຕົກລົງ"</string>
+    <!-- no translation found for call_lost (6183862117003999578) -->
+    <skip />
     <string name="audio_mode_speaker" msgid="27649582100085266">"ລຳໂພງ"</string>
     <string name="audio_mode_earpiece" msgid="4156527186373869107">"ຊຸດຫູຟັງ"</string>
     <string name="audio_mode_wired_headset" msgid="1465350758489175975">"ຊຸດຫູຟັງແບບມີສາຍ"</string>
@@ -38,7 +39,8 @@
     <string name="caller_manage_header" msgid="3231519674734638786">"ປະຊຸມສາຍ <xliff:g id="CONF_CALL_TIME">%s</xliff:g>"</string>
     <string name="voicemail_settings_number_label" msgid="8524164258691887790">"ເບີຂໍ້ຄວາມສຽງ"</string>
     <string name="card_title_dialing" msgid="5769417478498348054">"ກຳລັງໂທ"</string>
-    <string name="card_title_redialing" msgid="4831412164303596395">"ກຳລັງລອງໃໝ່"</string>
+    <!-- no translation found for card_title_redialing (8253487008234167266) -->
+    <skip />
     <string name="card_title_conf_call" msgid="1162980346189744501">"ປະຊຸມສາຍ"</string>
     <string name="card_title_incoming_call" msgid="7364539451234646909">"ສາຍໂທເຂົ້າ"</string>
     <string name="card_title_call_ended" msgid="5544730338889702298">"ວາງສາຍແລ້ວ"</string>
@@ -49,9 +51,12 @@
     <string name="card_title_video_call_connecting" msgid="297586766381973954">"​ກຳ​ລັງ​ເຊື່ອມ​ຕໍ່​ວິ​ດີ​ໂອ"</string>
     <string name="card_title_video_call" msgid="5898636679563320218">"ໂທ​ແບບ​ເຫັນ​ໜ້າ"</string>
     <string name="card_title_video_call_requesting" msgid="4587504939739340937">"​ກຳ​ລັງ​ຮ້ອງ​ຂໍ​ວິ​ດີ​ໂອ"</string>
-    <string name="card_title_video_call_error" msgid="5520555528871673801">"ບໍ່​ສາ​ມາດ​​ເຊື່ອມ​ຕໍ່​​ສາຍວິ​ດີ​ໂອໄດ້"</string>
-    <string name="card_title_callback_number" msgid="4604563437776874016">"ເບີ​ໂທ​ກັບ​ຂອງ​ທ່ານ\n <xliff:g id="DARK_NUMBER">%1$s</xliff:g>"</string>
-    <string name="card_title_callback_number_emergency" msgid="85588345502265075">"​ໝາຍ​ເລກ​ໂທ​ກັບ​ສຸກ​ເສີນ​ຂອງ​ທ່ານ​ຄື\n <xliff:g id="DARK_NUMBER">%1$s</xliff:g>"</string>
+    <!-- no translation found for card_title_video_call_error (9000555878389539225) -->
+    <skip />
+    <!-- no translation found for card_title_callback_number (7307938207564217293) -->
+    <skip />
+    <!-- no translation found for card_title_callback_number_emergency (8634765419223426754) -->
+    <skip />
     <string name="notification_dialing" msgid="2107666444937350731">"ກຳລັງໂທ"</string>
     <string name="notification_missedCallTitle" msgid="7554385905572364535">"ສາຍທີ່ບໍ່ໄດ້ຮັບ"</string>
     <string name="notification_missedCallsTitle" msgid="1361677948941502522">"ສາຍທີ່ບໍ່ໄດ້ຮັບ"</string>
@@ -78,23 +83,35 @@
     <string name="notification_missedCall_message" msgid="3049928912736917988">"ຂໍ້ຄວາມ"</string>
     <string name="incall_error_power_off" msgid="6550191216405193368">"ເພື່ອໂທລະສັບ, ໃຫ້ປິດໂໝດຢູ່ເທິງຍົນກ່ອນ."</string>
     <string name="incall_error_emergency_only" msgid="4678640422710818317">"ບໍ່ໄດ້ລົງທະບຽນໃນເຄືອຂ່າຍ."</string>
-    <string name="incall_error_out_of_service" msgid="8587993036435080418">"ເຄືອຂ່າຍມືຖືບໍ່ສາມາດໃຊ້ໄດ້."</string>
-    <string name="incall_error_no_phone_number_supplied" msgid="4197432103471807739">"ບໍ່ໄດ້ໂທເທື່ອ, ເບີໂທທີ່ລະບຸບໍ່ຖືກຕ້ອງ."</string>
-    <string name="incall_error_call_failed" msgid="4313552620858880999">"ບໍ່ໄດ້ໂທເທື່ອ."</string>
+    <string name="incall_error_out_of_service" msgid="4100065333878929223">"ບໍ່​ມີ​ເຄືອ​ຂ່າຍ​ມື​ຖື​ທີ່​ສາ​ມາດ​ໃຊ້​ໄດ້."</string>
+    <!-- no translation found for incall_error_no_phone_number_supplied (1150414018684246528) -->
+    <skip />
+    <!-- no translation found for incall_error_call_failed (6302746943230078197) -->
+    <skip />
     <string name="incall_status_dialed_mmi" msgid="3672498861336189563">"ກຳລັງເລີ່ມຕົ້ນລຳດັບ MMI..."</string>
-    <string name="incall_error_supp_service_unknown" msgid="2991054870745666038">"ບໍລິການທີ່ບໍ່ຮອງຮັບ."</string>
-    <string name="incall_error_supp_service_switch" msgid="3503552565745872241">"ບໍ່ສາມາດສະລັບສາຍໄດ້."</string>
-    <string name="incall_error_supp_service_separate" msgid="914362338192301746">"ບໍ່ສາມາດແຍກສາຍໄດ້."</string>
-    <string name="incall_error_supp_service_transfer" msgid="2509871374644921632">"ບໍ່ສາມາດໂອນສາຍໄດ້."</string>
-    <string name="incall_error_supp_service_conference" msgid="2505727299596357312">"ບໍ່ສາມາດປະຊຸມສາຍໄດ້."</string>
-    <string name="incall_error_supp_service_reject" msgid="7055164130563826216">"ບໍ່ສາມາດປະຕິເສດສາຍໄດ້."</string>
-    <string name="incall_error_supp_service_hangup" msgid="7417583238334762737">"ບໍ່ສາມາດປ່ອຍສາຍໄດ້."</string>
+    <!-- no translation found for incall_error_supp_service_unknown (323435289607131929) -->
+    <skip />
+    <!-- no translation found for incall_error_supp_service_switch (5237002176899962862) -->
+    <skip />
+    <!-- no translation found for incall_error_supp_service_separate (7224393405134545246) -->
+    <skip />
+    <!-- no translation found for incall_error_supp_service_transfer (7235952238189391438) -->
+    <skip />
+    <!-- no translation found for incall_error_supp_service_conference (7010354362202271726) -->
+    <skip />
+    <!-- no translation found for incall_error_supp_service_reject (8998568661508655638) -->
+    <skip />
+    <!-- no translation found for incall_error_supp_service_hangup (7434513517153834426) -->
+    <skip />
     <string name="incall_call_type_label_sip" msgid="4931428719494190371">"ການໂທ SIP"</string>
     <string name="emergency_enable_radio_dialog_title" msgid="4627849966634578257">"ໂທສຸກເສີນ"</string>
     <string name="emergency_enable_radio_dialog_message" msgid="207613549344420291">"ກຳລັງເປີດໃຊ້ວິທະຍຸ..."</string>
-    <string name="emergency_enable_radio_dialog_retry" msgid="3724423402363063736">"ຢູ່ນອກເຂດບໍລິການ, ກຳລັງລອງໃໝ່..."</string>
-    <string name="dial_emergency_error" msgid="7969515493359619960">"ບໍ່ໄດ້ໂທອອກເທື່ອ. <xliff:g id="NON_EMERGENCY_NUMBER">%s</xliff:g> ບໍ່ແມ່ນໝາຍເລກສຸກເສີນ!"</string>
-    <string name="dial_emergency_empty_error" msgid="5556166819619323893">"ບໍ່ໄດ້ໂທອອກ. ກົດຫາໝາຍເລກສຸກເສີນ!"</string>
+    <!-- no translation found for emergency_enable_radio_dialog_retry (5960061579996526883) -->
+    <skip />
+    <!-- no translation found for dial_emergency_error (1509085166367420355) -->
+    <skip />
+    <!-- no translation found for dial_emergency_empty_error (9130194953830414638) -->
+    <skip />
     <string name="dialerKeyboardHintText" msgid="9192914825413747792">"ໃຊ້ແປ້ນພິມເພື່ອກົດໂທ"</string>
     <string name="overflowHoldMenuItemText" msgid="7382457697092158039">"​ພັກ​ສາຍ"</string>
     <string name="overflowResumeMenuItemText" msgid="8826360006222366843">"​ສືບ​ຕໍ່​ສາຍ"</string>
@@ -135,7 +152,8 @@
     <string name="accessibility_call_muted" msgid="2776111226185342220">"ປິດສຽງການໂທແລ້ວ."</string>
     <string name="accessibility_call_unmuted" msgid="7496527089753980871">"ເຊົາ​ປິດ​ສຽງ​ສາຍ​ໂທ​ເຂົ້າ​ແລ້ວ​."</string>
     <string name="accessibility_call_put_on_hold" msgid="4226100429657528833">"​ສາຍ​ໂທ​ເຂົ້າ​ຖືກ​ຕັ້ງ​ໃຫ້​​ຖືສາຍລໍ​ຖ້າ​ແລ້ວ."</string>
-    <string name="accessibility_call_removed_from_hold" msgid="2269352120695851563">"ຍົກ​ເລີກສາຍ​ໂທ​ເຂົ້າ​​​​ໃຫ້ຖື​ສາຍ​ລໍ​​ຖ້າແລ້ວ."</string>
+    <!-- no translation found for accessibility_call_removed_from_hold (5107480079544990575) -->
+    <skip />
     <string name="description_target_answer" msgid="7205604197797472471">"ຄໍາ​ຕອບ"</string>
     <string name="description_target_send_sms" msgid="2098326025587950144">"ສົ່ງ SMS"</string>
     <string name="description_target_decline" msgid="4789834364389731957">"ປະຕິເສດ"</string>
@@ -153,7 +171,8 @@
     <string name="default_notification_description" msgid="78174796906240970">"ສຽງເລີ່ມຕົ້ນ (<xliff:g id="DEFAULT_SOUND_TITLE">%1$s</xliff:g>)"</string>
     <string name="ringtone_title" msgid="6374978286202084684">"ຣິງໂທນໂທລະສັບ"</string>
     <string name="vibrate_on_ring_title" msgid="9197564612065258960">"ສັ່ນເຕືອນເມື່ອມີສາຍໂທເຂົ້າ"</string>
-    <string name="dial_pad_autocomplete" msgid="494525952035761075">"Dial pad autocomplete"</string>
+    <!-- no translation found for dial_pad_autocomplete (7683489952557536398) -->
+    <skip />
     <string name="preference_category_ringtone" msgid="5197960752529332721">"ຣິງໂທນ &amp; ການສັ່ນເຕືອນ"</string>
     <string name="manageConferenceLabel" msgid="4691922394301969053">"ຈັດການການປະຊຸມສາຍ"</string>
     <string name="emergency_call_dialog_number_for_display" msgid="8373041754188879871">"ເບີໂທສຸກເສີນ"</string>
