--- a/InCallUI/res/values-sl/strings.xml
+++ b/InCallUI/res/values-sl/strings.xml
@@ -21,10 +21,11 @@
     <string name="onHold" msgid="9035493194749959955">"Zadržano"</string>
     <string name="unknown" msgid="6878797917991465859">"Neznano"</string>
     <string name="private_num" msgid="6713286113000232309">"Zasebna številka"</string>
-    <string name="payphone" msgid="1931775086311769314">"Telefonska govorilnica"</string>
+    <!-- no translation found for payphone (4793877574636445118) -->
+    <skip />
     <string name="confCall" msgid="1904840547188336828">"Konferenčni klic"</string>
-    <string name="call_lost" msgid="317670617901479594">"Klic je bil izgubljen."</string>
-    <string name="ok" msgid="3811371167865772377">"V redu"</string>
+    <!-- no translation found for call_lost (6183862117003999578) -->
+    <skip />
     <string name="audio_mode_speaker" msgid="27649582100085266">"Zvočnik"</string>
     <string name="audio_mode_earpiece" msgid="4156527186373869107">"Slušalka"</string>
     <string name="audio_mode_wired_headset" msgid="1465350758489175975">"Žične slušalke"</string>
@@ -38,7 +39,8 @@
     <string name="caller_manage_header" msgid="3231519674734638786">"Konferenčni klic <xliff:g id="CONF_CALL_TIME">%s</xliff:g>"</string>
     <string name="voicemail_settings_number_label" msgid="8524164258691887790">"Številka glasovne pošte"</string>
     <string name="card_title_dialing" msgid="5769417478498348054">"Klicanje"</string>
-    <string name="card_title_redialing" msgid="4831412164303596395">"Ponovni poskus"</string>
+    <!-- no translation found for card_title_redialing (8253487008234167266) -->
+    <skip />
     <string name="card_title_conf_call" msgid="1162980346189744501">"Konferenčni klic"</string>
     <string name="card_title_incoming_call" msgid="7364539451234646909">"Dohodni klic"</string>
     <string name="card_title_call_ended" msgid="5544730338889702298">"Klic je bil končan"</string>
@@ -49,9 +51,12 @@
     <string name="card_title_video_call_connecting" msgid="297586766381973954">"Povezovanje videa"</string>
     <string name="card_title_video_call" msgid="5898636679563320218">"Videoklic"</string>
     <string name="card_title_video_call_requesting" msgid="4587504939739340937">"Zahtevanje videa"</string>
-    <string name="card_title_video_call_error" msgid="5520555528871673801">"Videoklica ni mogoče vzpostaviti"</string>
-    <string name="card_title_callback_number" msgid="4604563437776874016">"Vaša številka za povratni klic\n <xliff:g id="DARK_NUMBER">%1$s</xliff:g>"</string>
-    <string name="card_title_callback_number_emergency" msgid="85588345502265075">"Vaša številka za povratni klic v sili: \n <xliff:g id="DARK_NUMBER">%1$s</xliff:g>"</string>
+    <!-- no translation found for card_title_video_call_error (9000555878389539225) -->
+    <skip />
+    <!-- no translation found for card_title_callback_number (7307938207564217293) -->
+    <skip />
+    <!-- no translation found for card_title_callback_number_emergency (8634765419223426754) -->
+    <skip />
     <string name="notification_dialing" msgid="2107666444937350731">"Klicanje"</string>
     <string name="notification_missedCallTitle" msgid="7554385905572364535">"Neodgovorjeni klic"</string>
     <string name="notification_missedCallsTitle" msgid="1361677948941502522">"Neodgovorjeni klici"</string>
@@ -78,23 +83,35 @@
     <string name="notification_missedCall_message" msgid="3049928912736917988">"Sporočilo"</string>
     <string name="incall_error_power_off" msgid="6550191216405193368">"Če želite poklicati, najprej izklopite način za letalo."</string>
     <string name="incall_error_emergency_only" msgid="4678640422710818317">"Ni registrirano v omrežju."</string>
-    <string name="incall_error_out_of_service" msgid="8587993036435080418">"Omrežje prenosnega telefona ni na voljo."</string>
-    <string name="incall_error_no_phone_number_supplied" msgid="4197432103471807739">"Klic ni bil poslan, veljavna številka ni vnesena."</string>
-    <string name="incall_error_call_failed" msgid="4313552620858880999">"Klic ni bil poslan."</string>
+    <string name="incall_error_out_of_service" msgid="4100065333878929223">"Mobilno omrežje ni na voljo."</string>
+    <!-- no translation found for incall_error_no_phone_number_supplied (1150414018684246528) -->
+    <skip />
+    <!-- no translation found for incall_error_call_failed (6302746943230078197) -->
+    <skip />
     <string name="incall_status_dialed_mmi" msgid="3672498861336189563">"Začetek zaporedja MMI ..."</string>
-    <string name="incall_error_supp_service_unknown" msgid="2991054870745666038">"Nepodprta storitev."</string>
-    <string name="incall_error_supp_service_switch" msgid="3503552565745872241">"Preklop klicev ni mogoč."</string>
-    <string name="incall_error_supp_service_separate" msgid="914362338192301746">"Klica ni mogoče ločiti."</string>
-    <string name="incall_error_supp_service_transfer" msgid="2509871374644921632">"Klica ni mogoče prenesti."</string>
-    <string name="incall_error_supp_service_conference" msgid="2505727299596357312">"Konferenčni klici onemogočeni."</string>
-    <string name="incall_error_supp_service_reject" msgid="7055164130563826216">"Klica ni mogoče zavrniti."</string>
-    <string name="incall_error_supp_service_hangup" msgid="7417583238334762737">"Klicev ni mogoče sprostiti."</string>
+    <!-- no translation found for incall_error_supp_service_unknown (323435289607131929) -->
+    <skip />
+    <!-- no translation found for incall_error_supp_service_switch (5237002176899962862) -->
+    <skip />
+    <!-- no translation found for incall_error_supp_service_separate (7224393405134545246) -->
+    <skip />
+    <!-- no translation found for incall_error_supp_service_transfer (7235952238189391438) -->
+    <skip />
+    <!-- no translation found for incall_error_supp_service_conference (7010354362202271726) -->
+    <skip />
+    <!-- no translation found for incall_error_supp_service_reject (8998568661508655638) -->
+    <skip />
+    <!-- no translation found for incall_error_supp_service_hangup (7434513517153834426) -->
+    <skip />
     <string name="incall_call_type_label_sip" msgid="4931428719494190371">"Klic SIP"</string>
     <string name="emergency_enable_radio_dialog_title" msgid="4627849966634578257">"Klic v sili"</string>
     <string name="emergency_enable_radio_dialog_message" msgid="207613549344420291">"Vklop radia …"</string>
-    <string name="emergency_enable_radio_dialog_retry" msgid="3724423402363063736">"Zunaj območja storitve, ponovni poskus ..."</string>
-    <string name="dial_emergency_error" msgid="7969515493359619960">"Klic ni bil poslan. <xliff:g id="NON_EMERGENCY_NUMBER">%s</xliff:g> ni številka za nujne primere!"</string>
-    <string name="dial_emergency_empty_error" msgid="5556166819619323893">"Klic ni bil poslan. Pokličite številko za nujne primere!"</string>
+    <!-- no translation found for emergency_enable_radio_dialog_retry (5960061579996526883) -->
+    <skip />
+    <!-- no translation found for dial_emergency_error (1509085166367420355) -->
+    <skip />
+    <!-- no translation found for dial_emergency_empty_error (9130194953830414638) -->
+    <skip />
     <string name="dialerKeyboardHintText" msgid="9192914825413747792">"Za klicanje uporabite tipkovnico"</string>
     <string name="overflowHoldMenuItemText" msgid="7382457697092158039">"Zadrži klic"</string>
     <string name="overflowResumeMenuItemText" msgid="8826360006222366843">"Nadaljuj klic"</string>
@@ -135,7 +152,8 @@
     <string name="accessibility_call_muted" msgid="2776111226185342220">"Klic izključen."</string>
     <string name="accessibility_call_unmuted" msgid="7496527089753980871">"Zvok klica je znova vklopljen."</string>
     <string name="accessibility_call_put_on_hold" msgid="4226100429657528833">"Klic je zadržan"</string>
-    <string name="accessibility_call_removed_from_hold" msgid="2269352120695851563">"Klic je sproščen."</string>
+    <!-- no translation found for accessibility_call_removed_from_hold (5107480079544990575) -->
+    <skip />
     <string name="description_target_answer" msgid="7205604197797472471">"Odgovori"</string>
     <string name="description_target_send_sms" msgid="2098326025587950144">"Pošlji SMS"</string>
     <string name="description_target_decline" msgid="4789834364389731957">"Zavrni"</string>
@@ -153,7 +171,8 @@
     <string name="default_notification_description" msgid="78174796906240970">"Privzeti zvok (<xliff:g id="DEFAULT_SOUND_TITLE">%1$s</xliff:g>)"</string>
     <string name="ringtone_title" msgid="6374978286202084684">"Ton zvonjenja telefona"</string>
     <string name="vibrate_on_ring_title" msgid="9197564612065258960">"Vibriranje ob zvonjenju"</string>
-    <string name="dial_pad_autocomplete" msgid="494525952035761075">"Samodokončanje za tipkovnico"</string>
+    <!-- no translation found for dial_pad_autocomplete (7683489952557536398) -->
+    <skip />
     <string name="preference_category_ringtone" msgid="5197960752529332721">"Zvonjenje in vibriranje"</string>
     <string name="manageConferenceLabel" msgid="4691922394301969053">"Upravljanje konferenčnih klicev"</string>
     <string name="emergency_call_dialog_number_for_display" msgid="8373041754188879871">"Številka za klic v sili"</string>
