Dialer: Add account selection support when set voicemail
Use the default voice subscription to set voicemail.

If there isn't default outgoing phone account, show
a select account dialog, let user chooses a sub to set
the voicemail number.

CRs-Fixed: 753098

Change-Id: I765f5d491155bc5a4604803dc3b3b76e14c4949a

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -600,6 +600,8 @@
          [CHAR LIMIT=30] -->
     <string name="call_log_voicemail_title">Voicemail</string>
 
+    <string name="select_account_dialog_title">Select Account</string>
+
     <string name="tab_speed_dial">Speed Dial</string>
 
     <string name="tab_recents">Recents</string>
